--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 JWT_SECRET=your_jwt_secret
-MONGO_URI=mongodb://localhost:27017/todo_db
+MONGO_URI=mongodb+srv://NURA:Nuru3336@cluster0.y2gkx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
